[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
anyhow = "1.0"

# Logging
env_logger = "0.9"
log = "0.4"

# Tokio
tokio = { version = "1", features = ["full"] }

# Shutdown
tokio-graceful-shutdown = "0.6"

# Command line arguments
clap = { version = "3.1", features = ["derive"] }
