[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "My program! (TODO: Edit this description)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
miette = "5.10.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.17"

# Tokio
tokio = { version = "1.32.0", features = ["full"] }

# Shutdown
tokio-graceful-shutdown = "0.14.0"

# Command line arguments
clap = { version = "4.4.7", features = ["derive"] }
